@@ -29,6 +29,7 @@ import io.crate.action.sql.SQLRequest;
 import io.crate.test.integration.CrateIntegrationTest;
 import io.crate.testing.TestingHelpers;
 import org.elasticsearch.common.collect.MapBuilder;
+import org.hamcrest.Matchers;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
@@ -64,20 +65,21 @@ public class InformationSchemaTest extends SQLTransportIntegrationTest {
     @Test
     public void testDefaultTables() throws Exception {
         execute("select * from information_schema.tables order by schema_name, table_name");
-        assertEquals(12L, response.rowCount());
+        assertEquals(13L, response.rowCount());
 
         assertArrayEquals(response.rows()[0], new Object[]{"information_schema", "columns", 1, "0", null, null, null});
         assertArrayEquals(response.rows()[1], new Object[]{"information_schema", "routines", 1, "0", null, null, null});
-        assertArrayEquals(response.rows()[2], new Object[]{"information_schema", "table_constraints", 1, "0", null, null, null});
-        assertArrayEquals(response.rows()[3], new Object[]{"information_schema", "table_partitions", 1, "0", null, null, null});
-        assertArrayEquals(response.rows()[4], new Object[]{"information_schema", "tables", 1, "0", null, null, null});
-        assertArrayEquals(response.rows()[5], new Object[]{"sys", "cluster", 1, "0", null, null, null});
-        assertArrayEquals(response.rows()[6], new Object[]{"sys", "jobs", 1, "0", null, null, null});
-        assertArrayEquals(response.rows()[7], new Object[]{"sys", "jobs_log", 1, "0", null, null, null});
-        assertArrayEquals(response.rows()[8], new Object[]{"sys", "nodes", 1, "0", null, null, null});
-        assertArrayEquals(response.rows()[9], new Object[]{"sys", "operations", 1, "0", null, null, null});
-        assertArrayEquals(response.rows()[10], new Object[]{"sys", "operations_log", 1, "0", null, null, null});
-        assertArrayEquals(response.rows()[11], new Object[]{"sys", "shards", 1, "0", null, null, null});
+        assertArrayEquals(response.rows()[2], new Object[]{"information_schema", "schemata", 1, "0", null, null, null});
+        assertArrayEquals(response.rows()[3], new Object[]{"information_schema", "table_constraints", 1, "0", null, null, null});
+        assertArrayEquals(response.rows()[4], new Object[]{"information_schema", "table_partitions", 1, "0", null, null, null});
+        assertArrayEquals(response.rows()[5], new Object[]{"information_schema", "tables", 1, "0", null, null, null});
+        assertArrayEquals(response.rows()[6], new Object[]{"sys", "cluster", 1, "0", null, null, null});
+        assertArrayEquals(response.rows()[7], new Object[]{"sys", "jobs", 1, "0", null, null, null});
+        assertArrayEquals(response.rows()[8], new Object[]{"sys", "jobs_log", 1, "0", null, null, null});
+        assertArrayEquals(response.rows()[9], new Object[]{"sys", "nodes", 1, "0", null, null, null});
+        assertArrayEquals(response.rows()[10], new Object[]{"sys", "operations", 1, "0", null, null, null});
+        assertArrayEquals(response.rows()[11], new Object[]{"sys", "operations_log", 1, "0", null, null, null});
+        assertArrayEquals(response.rows()[12], new Object[]{"sys", "shards", 1, "0", null, null, null});
     }
 
     @Test
@@ -117,7 +119,7 @@ public class InformationSchemaTest extends SQLTransportIntegrationTest {
         serviceSetup();
 
         execute("select * from information_schema.tables");
-        assertEquals(15L, response.rowCount());
+        assertEquals(16L, response.rowCount());
 
         client().execute(SQLAction.INSTANCE,
             new SQLRequest("create table t4 (col1 integer, col2 string)")).actionGet();
@@ -127,7 +129,7 @@ public class InformationSchemaTest extends SQLTransportIntegrationTest {
         Thread.sleep(10);
 
         execute("select * from information_schema.tables");
-        assertEquals(16L, response.rowCount());
+        assertEquals(17L, response.rowCount());
     }
 
     @Test
@@ -262,21 +264,23 @@ public class InformationSchemaTest extends SQLTransportIntegrationTest {
     public void testSelectFromTableConstraints() throws Exception {
 
         execute("select * from INFORMATION_SCHEMA.table_constraints order by schema_name asc, table_name asc");
-        assertEquals(6L, response.rowCount());
+        assertEquals(7L, response.rowCount());
         assertThat(response.cols(), arrayContaining("schema_name", "table_name", "constraint_name",
                 "constraint_type"));
         assertThat(dotJoiner.join(response.rows()[0][0], response.rows()[0][1]), is("information_schema.columns"));
         assertThat(commaJoiner.join((String[]) response.rows()[0][2]), is("schema_name, table_name, column_name"));
-        assertThat(dotJoiner.join(response.rows()[1][0], response.rows()[1][1]), is("information_schema.tables"));
-        assertThat(commaJoiner.join((String[])response.rows()[1][2]), is("schema_name, table_name"));
-        assertThat(dotJoiner.join(response.rows()[2][0], response.rows()[2][1]), is("sys.jobs"));
-        assertThat(commaJoiner.join((String[])response.rows()[2][2]), is("id"));
-        assertThat(dotJoiner.join(response.rows()[3][0], response.rows()[3][1]), is("sys.jobs_log"));
+        assertThat(dotJoiner.join(response.rows()[1][0], response.rows()[1][1]), is("information_schema.schemata"));
+        assertThat(commaJoiner.join((String[])response.rows()[1][2]), is("schema_name"));
+        assertThat(dotJoiner.join(response.rows()[2][0], response.rows()[2][1]), is("information_schema.tables"));
+        assertThat(commaJoiner.join((String[])response.rows()[2][2]), is("schema_name, table_name"));
+        assertThat(dotJoiner.join(response.rows()[3][0], response.rows()[3][1]), is("sys.jobs"));
         assertThat(commaJoiner.join((String[])response.rows()[3][2]), is("id"));
-        assertThat(dotJoiner.join(response.rows()[4][0], response.rows()[4][1]), is("sys.nodes"));
+        assertThat(dotJoiner.join(response.rows()[4][0], response.rows()[4][1]), is("sys.jobs_log"));
         assertThat(commaJoiner.join((String[])response.rows()[4][2]), is("id"));
-        assertThat(dotJoiner.join(response.rows()[5][0], response.rows()[5][1]), is("sys.shards"));
-        assertThat(commaJoiner.join((String[])response.rows()[5][2]), is("schema_name, table_name, id, partition_ident"));
+        assertThat(dotJoiner.join(response.rows()[5][0], response.rows()[5][1]), is("sys.nodes"));
+        assertThat(commaJoiner.join((String[])response.rows()[5][2]), is("id"));
+        assertThat(dotJoiner.join(response.rows()[6][0], response.rows()[6][1]), is("sys.shards"));
+        assertThat(commaJoiner.join((String[])response.rows()[6][2]), is("schema_name, table_name, id, partition_ident"));
 
         execute("create table test (col1 integer primary key, col2 string)");
         ensureGreen();
@@ -427,7 +431,7 @@ public class InformationSchemaTest extends SQLTransportIntegrationTest {
     @Test
     public void testDefaultColumns() throws Exception {
         execute("select * from information_schema.columns order by schema_name, table_name");
-        assertEquals(200L, response.rowCount());
+        assertEquals(201L, response.rowCount());
     }
 
     @Test
@@ -612,7 +616,7 @@ public class InformationSchemaTest extends SQLTransportIntegrationTest {
         ensureYellow();
         execute("select count(*) from information_schema.tables");
         assertEquals(1, response.rowCount());
-        assertEquals(15L, response.rows()[0][0]);
+        assertEquals(16L, response.rows()[0][0]);
     }
 
     @Test
@@ -931,4 +935,17 @@ public class InformationSchemaTest extends SQLTransportIntegrationTest {
         assertThat((String)response.rows()[1][0], is("doc"));
     }
 
+    @Test
+    public void testSelectSchemata() throws Exception {
+        execute("select * from information_schema.schemata order by schema_name asc");
+        assertThat(response.rowCount(), is(4L));
+        assertThat(TestingHelpers.getColumn(response.rows(), 0), is(Matchers.<Object>arrayContaining("blob", "doc", "information_schema", "sys")));
+
+        execute("create table t1 (col string) with (number_of_replicas=0)");
+        ensureGreen();
+
+        execute("select * from information_schema.schemata order by schema_name asc");
+        assertThat(response.rowCount(), is(4L));
+        assertThat(TestingHelpers.getColumn(response.rows(), 0), is(Matchers.<Object>arrayContaining("blob", "doc", "information_schema", "sys")));
+    }
 }
